--- a/buszy.html
+++ b/buszy.html
@@ -293,24 +293,24 @@
             <h2></h2>
             <div class="card-container">
                 <div class="card-bz card-nbs">
-                    <img src="bat/assets/nbs.png" alt="nbs" class="card-icon" />
+                    <img src="buszy/assets/nbs.png" alt="nbs" class="card-icon" />
                     <p>Nearby Bus Stops</p>
-                    <a href="bat/nbs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="buszy/nbs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-sbs">
-                    <img src="bat/assets/sbs.png" alt="sbs" class="card-icon" />
+                    <img src="buszy/assets/sbs.png" alt="sbs" class="card-icon" />
                     <p>Search Bus Stops</p>
-                    <a href="bat/abs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="buszy/abs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-ann">
-                    <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
+                    <img src="buszy/assets/ann.png" alt="ann" class="card-icon" />
                     <p>Announcements</p>
-                    <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="buszy/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-ann">
-                    <img src="bat/assets/settings.png" alt="settings" class="card-icon" />
+                    <img src="buszy/assets/settings.png" alt="settings" class="card-icon" />
                     <p>Settings</p>
-                    <a href="bat/settings.html" class="btn bz-btn btn-2 mt-15"><i
+                    <a href="buszy/settings.html" class="btn bz-btn btn-2 mt-15"><i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -359,7 +359,7 @@
 
     <script src="js/navtabs.js"></script>
 
-    <script src="bat/buszy.js"></script>
+    <script src="buszy/buszy.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
@@ -400,7 +400,7 @@
 
                     // Make the bus stop details clickable
                     const link = document.createElement('a');
-                    link.href = `bat/art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                    link.href = `buszy/art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
                     link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
                     link.style.flexGrow = '1';
                     link.style.textDecoration = 'none';
