--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -446,6 +446,10 @@
                     button.classList.remove('btn-toPin');
                     button.classList.add('btn-unpin');
                 } else {
+                    // Confirm before unpinning
+                    const confirmUnpin = confirm('Are you sure you want to unpin this bus stop?');
+                    if (!confirmUnpin) return;
+
                     // Remove the pinned bus stop
                     bookmarks.splice(bookmarkIndex, 1);
                     localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
