--- a/buszy/art.html
+++ b/buszy/art.html
@@ -381,7 +381,7 @@
             }, 300));
 
             // Refresh data every 5 seconds
-            setInterval(fetchBusArrivals, 5000);
+            // setInterval(fetchBusArrivals, 5000);
 
             // Listen for changes in localStorage to update time format dynamically
             window.addEventListener('storage', (event) => {
@@ -441,12 +441,16 @@
                     <span class="bus-time">
                         ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : '-'} 
                         &nbsp; 
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
+                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : ''}
+                        &nbsp;
+                        ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
                     </span>
                     <span class="bus-time">
                         ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-                        &nbsp; 
-                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
+                        &nbsp;
+                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 50px; height: auto;">` : ''}
+                     &nbsp;
+                    ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
                     </span>
                 </td>
                 <td> 
@@ -460,6 +464,19 @@
                 console.error('Error fetching bus arrivals:', error);
                 const tableBody = document.querySelector('table tbody');
                 tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" Error loading data</td></tr>';
+            }
+        }
+
+        function getLoadIcon(load) {
+            switch (load) {
+                case 'SEA':
+                    return '<i class="fa-solid fa-user" title="Seats Available"></i>'; // Icon for SEA
+                case 'SDA':
+                    return '<i class="fa-solid fa-user-group" title="Standing Available"></i>'; // Icon for SDA
+                case 'LSD':
+                    return '<i class="fa-solid fa-people-group" title="Limited Standing"></i>'; // Icon for LSD
+                default:
+                    return ''; // No icon for unknown load values
             }
         }
 
