--- a/buszy/art.html
+++ b/buszy/art.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search Bus Stop | Buszy</title>
+    <title>Arrival Timings | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -35,6 +35,14 @@
 <style>
     #cv-bat-subp {
         height: 10vh;
+    }
+
+    .fl {
+        font-size: 15px;
+        background-color: #000;
+        color: #fff;
+        padding: 8px;
+        border-radius: 10px;
     }
 
     .footer {
@@ -262,6 +270,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="fleet-legend">
+                <h2 class="fl">Fleet Legend</h2>
                 <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
                 <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
                 <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
@@ -381,7 +390,7 @@
             }, 300));
 
             // Refresh data every 5 seconds
-            setInterval(fetchBusArrivals, 5000);
+            // setInterval(fetchBusArrivals, 5000);
 
             // Listen for changes in localStorage to update time format dynamically
             window.addEventListener('storage', (event) => {
@@ -445,15 +454,16 @@
                         &nbsp;
                         ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
                     </span>
+
                     <span class="bus-time">
-                        ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-                        &nbsp;
+                        ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : '-'} 
+                        &nbsp; 
                         ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 50px; height: auto;">` : ''}
-                     &nbsp;
-                    ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
+                        &nbsp;
+                        ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
                     </span>
                 </td>
-                <td> 
+                <td>
                     ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
                 </td>
             `;
