--- a/buszy/art (2).html
+++ b/buszy/art (2).html
@@ -48,56 +48,6 @@
     .footer {
         display: none;
     }
-
-
-    .card-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 1rem;
-        margin-top: 1.5rem;
-    }
-
-    .card {
-        border: 1px solid #ddd;
-        border-radius: 25px;
-        padding: 1rem;
-        background-color: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .card .card-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-weight: bold;
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-    }
-
-    .card .card-content {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-
-    .card .card-content span {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-    }
-
-    .card .operator-logo {
-        width: 50px;
-        height: auto;
-    }
-
-    .card-text {
-        text-align: left !important;
-    }
-
-    .card-bt {
-        margin-top: 1em;
-    }
 </style>
 
 <body>
@@ -316,44 +266,8 @@
 
     </section>
 
-
-    <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
-            </div>
-
-            <!-- Responsive Cards -->
-            <div class="row" id="bus-arrivals-container">
-                <div class="col-12 text-center">
-                    <p>
-                        <span class="spinner-border" role="status"></span> Loading Data...
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Section Contents -->
-    <!-- <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
+    <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="fleet-legend">
                 <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
@@ -382,7 +296,7 @@
             </table>
 
         </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -509,7 +423,7 @@
             }, 300));
 
             // Refresh data every 5 seconds
-            // setInterval(fetchBusArrivals, 5000);
+            setInterval(fetchBusArrivals, 5000);
 
             // Listen for changes in localStorage to update time format dynamically
             window.addEventListener('storage', (event) => {
@@ -531,18 +445,15 @@
         async function fetchBusArrivals() {
             try {
                 const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const container = document.getElementById('bus-arrivals-container');
+                const tableBody = document.querySelector('table tbody');
 
                 if (!searchInput) {
-                    container.innerHTML = `
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-header">No Data</div>
-                            <div class="card-body">
-                                <p class="card-text">Pick a Bus stop in the Search Page.</p>
-                            </div>
-                        </div>
-                    </div>`;
+                    tableBody.innerHTML = `
+                <tr class="no-data">
+                    <td colspan="3">
+                        <p>Pick a Bus stop in the Search Page.</p>
+                    </td>
+                </tr>`;
                     return;
                 }
 
@@ -558,150 +469,56 @@
                 const data = await response.json();
                 console.log('API Response:', data);
 
-                container.innerHTML = '';
+                tableBody.innerHTML = '';
 
                 if (!data.Services || data.Services.length === 0) {
-                    container.innerHTML = `
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-header">No Data Available</div>
-                            <div class="card-body">
-                                <p class="card-text">No Data Available</p>
-                            </div>
-                        </div>
-                    </div>`;
+                    tableBody.innerHTML = `
+                <tr class="no-data">
+                    <td colspan="3">
+                        <p>No Data Available</p>
+                    </td>
+                </tr>`;
                     return;
                 }
 
                 const now = new Date();
 
                 data.Services.forEach((service) => {
-                    const card = document.createElement('div');
-                    card.classList.add('col-12', 'col-sm-6', 'col-md-4', 'col-xl-3', 'card-bt'); // Add col-sm-6 for 2 cards per row on small screens
-                    card.innerHTML = `
-                <div class="card">
-                    <div class="card-header d-flex justify-content-between">
-                        <span>${service.ServiceNo}</span>
-                        ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="img-fluid" style="width: 50px;">` : ''}
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">
-                            <span>${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : ''}</span>
-                            ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" class="img-fluid" style="width: 50px;">` : ''}
-                            ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
-                        </p>
-                        <p class="card-text">
-                            <span>${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''}</span>
-                            ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" class="img-fluid" style="width: 50px;">` : ''}
-                            ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
-                        </p>
-                    </div>
-                </div>
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                <td class="svcNumtd">
+                    <p class="svcNum">${service.ServiceNo}</p>
+                </td>
+                <td class="departure-spacing">
+                    <span class="bus-time">
+                        ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : ''} 
+                        &nbsp; &nbsp; 
+                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : ''}
+                        &nbsp;
+                        ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
+                    </span>
+
+                    <span class="bus-time">
+                        ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
+                        &nbsp;&nbsp; 
+                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 50px; height: auto;">` : ''}
+                        &nbsp;
+                        ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
+                    </span>
+                </td>
+                <td>
+                    ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
+                </td>
             `;
-                    container.appendChild(card);
+                    tableBody.appendChild(row);
                 });
+
             } catch (error) {
                 console.error('Error fetching bus arrivals:', error);
-                const container = document.getElementById('bus-arrivals-container');
-                container.innerHTML = `
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">Error</div>
-                        <div class="card-body">
-                            <p class="card-text">Error loading data</p>
-                        </div>
-                    </div>
-                </div>`;
+                const tableBody = document.querySelector('table tbody');
+                tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" Error loading data</td></tr>';
             }
         }
-
-
-
-        //    async function fetchBusArrivals() {
-        //         try {
-        //             const searchInput = document.getElementById('bus-stop-search').value.trim();
-        //             const tableBody = document.querySelector('table tbody');
-
-        //             if (!searchInput) {
-        //                 tableBody.innerHTML = `
-        //             <tr class="no-data">
-        //                 <td colspan="3">
-        //                     <p>Pick a Bus stop in the Search Page.</p>
-        //                 </td>
-        //             </tr>`;
-        //                 return;
-        //             }
-
-        //             const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-        //             url.searchParams.append('BusStopCode', searchInput);
-
-        //             const response = await fetch(url);
-
-        //             if (!response.ok) {
-        //                 throw new Error('Failed to fetch bus arrivals');
-        //             }
-
-        //             const data = await response.json();
-        //             console.log('API Response:', data);
-
-        //             tableBody.innerHTML = '';
-
-        //             if (!data.Services || data.Services.length === 0) {
-        //                 tableBody.innerHTML = `
-        //             <tr class="no-data">
-        //                 <td colspan="3">
-        //                     <p>No Data Available</p>
-        //                 </td>
-        //             </tr>`;
-        //                 return;
-        //             }
-
-        //             const now = new Date();
-
-        //             data.Services.forEach((service) => {
-        //                 const row = document.createElement('tr');
-        //                 row.innerHTML = `
-        //             <td class="svcNumtd">
-        //                 <p class="svcNum">${service.ServiceNo}</p>
-        //             </td>
-        //             <td class="departure-spacing">
-        //                 <span class="bus-time">
-        //                     ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : ''} 
-        //                     &nbsp; &nbsp; 
-        //                     ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : ''}
-        //                     &nbsp;
-        //                     ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
-        //                 </span>
-
-        //                 <span class="bus-time">
-        //                     ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-        //                     &nbsp;&nbsp; 
-        //                     ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 50px; height: auto;">` : ''}
-        //                     &nbsp;
-        //                     ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
-        //                 </span>
-        //             </td>
-        //             <td>
-        //                 ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-        //             </td>
-        //         `;
-        //                 tableBody.appendChild(row);
-        //             });
-
-        //         } catch (error) {
-        //             console.error('Error fetching bus arrivals:', error);
-        //             const tableBody = document.querySelector('table tbody');
-        //             tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" Error loading data</td></tr>';
-        //         }
-        //     }
-
-
-
-
-
-
-
-
 
         function getLoadIcon(load) {
             switch (load) {
