--- a/buszy.html
+++ b/buszy.html
@@ -158,6 +158,50 @@
     .footer {
         display: none;
     }
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 25px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 16px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description {
+        font-size: 20px;
+        font-weight: bold;
+        margin-left: 12px;
+        cursor: default;
+    }
+
+    .bus-stop-info {
+        display: flex;
+        align-items: center;
+    }
 </style>
 
 <body>
@@ -437,9 +481,15 @@
                             // Make the bus stop details clickable
                             const link = document.createElement('a');
                             link.href = `buszy/art.html?BusStopCode=${encodeURIComponent(bookmark.BusStopCode)}`;
-                            link.textContent = busStop
-                                ? `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`
-                                : `${bookmark.BusStopCode} - Unknown Bus Stop`;
+                            link.innerHTML = `
+                    <div class="bus-stop-info">
+                        <span class="bus-stop-code">
+                            <img src="buszy/assets/bus-icon.png" alt="Bus Icon"> <!-- Replace with your bus icon path -->
+                            <span class="bus-stop-code-text">${busStop.BusStopCode}</span>
+                        </span>
+                        <span class="bus-stop-description">${busStop.Description}</span>
+                    </div>
+                `;
                             link.style.flexGrow = '1';
                             link.style.textDecoration = 'none';
                             link.style.color = 'inherit';
