--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -40,6 +40,62 @@
     .footer {
         display: none;
     }
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 25px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 18px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description {
+        font-size: 20px;
+        font-weight: bold;
+        margin-left: 12px;
+        cursor: default;
+    }
+
+    .bus-stop-info {
+        display: flex;
+        align-items: center;
+    }
+
+    @media (max-width: 545px) {
+    .bus-stop-info {
+        flex-direction: column; /* Stack items vertically */
+        align-items: flex-start; /* Align items to the start */
+    }
+
+    .bus-stop-description {
+        margin-left: 0; /* Remove left margin */
+        margin-top: 5px; /* Add spacing above the description */
+    }
+}
 </style>
 
 <body>
@@ -395,7 +451,15 @@
                     // Make the bus stop details clickable
                     const link = document.createElement('a');
                     link.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
-                    link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                    link.innerHTML = `
+                    <div class="bus-stop-info">
+                        <span class="bus-stop-code">
+                            <img src="assets/bus-icon.png" alt="Bus Icon"> <!-- Replace with your bus icon path -->
+                            <span class="bus-stop-code-text">${busStop.BusStopCode}</span>
+                        </span>
+                        <span class="bus-stop-description">${busStop.Description}</span>
+                    </div>
+                `;
                     link.style.flexGrow = '1';
                     link.style.textDecoration = 'none';
                     link.style.color = 'inherit';
