--- a/buszy.html
+++ b/buszy.html
@@ -180,7 +180,7 @@
 
     .bus-stop-code-text,
     body.dark-mode .bus-stop-code-text {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         color: #000;
         background-color: #fff;
@@ -202,6 +202,18 @@
         display: flex;
         align-items: center;
     }
+
+    @media (max-width: 545px) {
+        .bus-stop-info {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .bus-stop-description,
+        body.dark-mode .bus-stop-description {
+            margin-left: 0px;
+            margin-top: 5px;
+        }
 </style>
 
 <body>
