--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -54,6 +54,19 @@
         cursor: default;
     }
 
+    body.dark-mode .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #7db603;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
     .bus-stop-code img {
         width: 25px;
         height: auto;
