2025-01 Cumulative Update for Version 2501 (6.1.x)

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row pw-portfolio">
+                <div class="container pw-portfolio">
 
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
+                    <div class="col-12 col-sm-4 col-md-4 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                         data-year="2025">
                         <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/9zxAL3F.png" alt>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
+                    <div class="col single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                         data-year="2025">
                         <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/HaCQ71l.png" alt>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeIn" data-wow-delay="300ms"
+                    <div class="col single_gallery_item in mb-30 wow fadeIn" data-wow-delay="300ms"
                         data-year="2024">
                         <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/Dlkjslp.png" alt="tdc-v3">
@@ -204,7 +204,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn"
+                    <div class="col single_gallery_item ds mc mb-30 wow fadeIn"
                         data-wow-delay="700ms">
                         <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/IeRTJiV.png" alt="bus-stop-pole">
